# COMP703

./: CMakeLists.txt  LICENCE  NOTICE  readme.md
include/3rd Party/AABB/: readme.txt
include/glad/: glad.h
include/project/: IDestroyable.h  buffer.cpp  buffer.h  camera.h  cube_go.h  custom_shader.h  game_object.h  iInputController.h  light.h  main.hpp  mesh.h  model.h  model_go.h  playerController.h  renderManager.h  shader.h  shader_ex.h  terrain.h  world.h
include/project/gameObject/: game_object.h  model_go.h  primitive_go.h
include/project/physics/: physic_manager.h
models/Resault/: LitleGoblen.mtl
models/Scene/: Scene.mtl
resources/models/14-girl-obj/: girl OBJ.mtl
resources/models/Trall/: GreenTrall.mtl  SK_Trall_Green.FBX
src/: CMakeLists.txt  buffer.cpp  camera.cpp  custom_shader.cpp  game_object.cpp  glad.c  iInputController.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  model_go.cpp  physic_manager.cpp  playerController.cpp  primitive_go.cpp  renderManager.cpp  shader.cpp  world.cpp
src/3rd Party/AABB/: AABBTree.cpp
src/shaders/: test.vsh
src/shaders/light/: light_source.fsh
src/shaders/model/: model.fsh  model.vsh
